--- a/sass/style.sass
+++ b/sass/style.sass
@@ -13,11 +13,11 @@ $orange: #F28B64
 html
   font-size: 62.5%
 
-//                        Header
+//                  Main Section
 
 .main-section
   position: relative
-  height: 80rem
+  min-height: 80rem
   background: #F0F0F0
   padding: 1.4rem 1.9rem 0 1.2rem 
   overflow: hidden
@@ -31,12 +31,14 @@ html
     display: flex
   &__first-circle
     position: absolute
-    top: 13.9rem
-    right: 1.4rem
+    top: 13.5rem
+    right: 1.5rem
   &__second-circle
     position: absolute
     right: -12rem
     top: 65rem
+   
+
     
 .container
   max-width: 114rem
@@ -54,15 +56,11 @@ html
     &:last-child
       margin-right: 0
 
-//                          Main
-
 .left
   position: relative
   &__img
     z-index: 5      
     position: relative
-
-.left
   &__rect-blue
     position: absolute
     top: 15rem
@@ -74,8 +72,6 @@ html
     border-radius: 10rem
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
     z-index: 2   
-
-.left
   &__rect-orange
     position: absolute
     top: 16rem
@@ -87,8 +83,6 @@ html
     border-radius: 10rem
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
     z-index: 3    
-
-.left
   &__rect-grey
     position: absolute
     top: 19rem
@@ -107,7 +101,6 @@ html
   top: 15rem
   right: 7.6rem
   z-index: 1      
-
   &__icons-box
     margin: .1rem 0 2.1rem 1rem
   &__text
@@ -116,7 +109,6 @@ html
     line-height: 2rem
   &__text:not(:last-child)
     margin-bottom: 2rem  
-
   &__title
     letter-spacing: -0.3rem
   &__icon-btn
@@ -172,14 +164,16 @@ html
   font-weight: 600
   font-size: 7.2rem
   line-height: 6.8rem
-
   &__hr
     position: absolute
     bottom: 1.5rem
     margin: 0     
     width: 2.5rem
     border: 0
-    border-top: .2rem solid #000 
+    border-top: .2rem solid #000
+    &_long
+      width: 21rem
+
 
 .circle
   display: flex
@@ -195,14 +189,81 @@ html
   &__center
     width: 12.933rem
     height: 12.933rem
-    left: 108.333rem
-    top: 24.633rem
     border-radius: 15rem
     background: #f0f0f0
     &_big
       width: 18.8rem
       height: 18.8rem
     
+//                Second Section
     
-    
+.second-section
+  min-height: 70rem
+  padding-top: 5.2rem
+  &__container
+    position: relative
+  &__card-box
+    display: flex
+    gap: 3rem
+  &__card-box:not(:last-child)
+    margin-bottom: 2.5rem
+  &__title:not(:last-child)
+    margin-bottom: 4rem
+  &__icon-box
+    margin-left: 5.2rem
+  &__first-circle
+    position: absolute
+    top: 2rem
+    right: -6rem
+    z-index: -1
+  &__second-circle  
+    position: absolute
+    top:33rem
+    left: -12rem   
+    z-index: -1
 
+.card-item
+  position: relative
+  display: flex
+  align-items: flex-end
+  width: 36rem
+  height: 36rem
+  background: $grey
+  border-radius: 1rem
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25))
+  &_orange
+    background: $orange
+  &_blue
+    background: $blue
+  &__img
+    height: 33.5rem
+  &__text
+    position: absolute
+    text-align: center
+    top: 14rem
+    right: -4rem
+    width: 28rem
+    font-weight: 600
+    font-size: 3.6rem
+    line-height: 4.4rem
+    transform: rotate(90deg)
+
+.icon-box-item
+  display: inline-flex
+    
+.icon-box
+  display: flex
+  gap: 6rem
+  &__text
+    font-weight: 400
+    font-size: 1.8rem
+    line-height: 2.2rem
+    span
+      font-weight: 600
+      font-size: 4.8rem
+      line-height: 5.9rem
+  
+.circle
+  &__center
+    &_white
+      background-color: #fff
