--- a/sass/style.sass
+++ b/sass/style.sass
@@ -240,13 +240,13 @@ html
   &__text
     position: absolute
     text-align: center
-    top: 14rem
+    top: 20rem
     right: -4rem
     width: 28rem
     font-weight: 600
     font-size: 3.6rem
     line-height: 4.4rem
-    transform: rotate(90deg)
+    // transform: rotate(90deg)
 
 .icon-box-item
   display: inline-flex
