--- a/css/style.css
+++ b/css/style.css
@@ -398,6 +398,7 @@ html {
 }
 
 .container {
+  position: relative;
   max-width: 114rem;
   margin: 0 auto;
 }
@@ -666,16 +667,23 @@ html {
 }
 
 .third-section {
+  position: relative;
+  z-index: 0;
   min-height: 64rem;
   background-color: #f0f0f0;
+  overflow: hidden;
 }
 .third-section__container {
   display: flex;
   flex-direction: row;
   align-items: center;
-  padding-left: 16.7rem;
   justify-content: space-between;
-  padding-top: 4.6rem;
+  padding: 4.6rem 0 4.6rem 16.7rem;
+}
+.third-section__figure {
+  position: absolute;
+  top: 16.9rem;
+  left: 1.9rem;
 }
 .third-section__right-content {
   max-width: 47.9rem;
@@ -690,6 +698,17 @@ html {
   font-weight: 400;
   font-size: 1.8rem;
   line-height: 2.2rem;
+}
+.third-section__first-circle {
+  position: absolute;
+  top: 10.4rem;
+  left: 11.1rem;
+  z-index: -1;
+}
+.third-section__second-circle {
+  position: absolute;
+  top: -12rem;
+  right: -12rem;
 }
 
 .title_right-hr {
