--- a/sass/queries.sass
+++ b/sass/queries.sass
@@ -1,14 +1,12 @@
-//                        1144px
+                      /* 1144px */
 
-@media (max-width: 71.5em) 
-  .icons
-    flex-wrap: wrap
-    row-gap: 1.7rem
-  //                       844px
+@media (max-width: 71.5em)
+
+  
+                      /* 844px */
 
 @media (max-width: 52.75em) 
-  .left__img
-    width: 100%
+  
 
  
 
