--- a/sass/queries.sass
+++ b/sass/queries.sass
@@ -1,12 +1,19 @@
-                      /* 1144px */
+//        1199px
+@media (max-width: 74.9375em)
+  .container
+    width: 9.6rem
 
-@media (max-width: 71.5em)
+.main-section__nav-container
+  position: absolute
+  top: 0
+  left: 0
+  padding: 4rem 0 0 4rem
+  min-height: 13rem;
+ 
+.header__img
+  margin-right: 3rem
 
-  
-                      /* 844px */
-
-@media (max-width: 52.75em) 
-  
+      
 
  
 
