--- a/css/queries.css
+++ b/css/queries.css
@@ -1,11 +1,15 @@
-@media (max-width: 71.5em) {
-  .icons {
-    flex-wrap: wrap;
-    row-gap: 1.7rem;
+@media (max-width: 74.9375em) {
+  .container {
+    width: 9.6rem;
+  }
+  .main-section__nav-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 4rem 4rem;
+  }/*# sourceMappingURL=queries.css.map */
+
+  .header__img {
+    margin-right: 3rem
   }
 }
-@media (max-width: 52.75em) {
-  .left__img {
-    width: 100%;
-  }
-}/*# sourceMappingURL=queries.css.map */
