--- a/css/style.css
+++ b/css/style.css
@@ -361,10 +361,6 @@ table {
   border-spacing: 0;
 }
 
-* {
-  box-sizing: border-box;
-}
-
 html {
   font-size: 62.5%;
   font-family: Montserrat;
@@ -407,7 +403,7 @@ html {
 
 .nav-menu__list {
   display: flex;
-  font-style: 600;
+  font-weight: 600;
   font-size: 1.8rem;
   line-height: 2.2rem;
 }
@@ -430,9 +426,9 @@ html {
 .left {
   position: relative;
 }
-.left__img {
-  z-index: 5;
+.left img {
   position: relative;
+  z-index: 5;
 }
 .left__rect-blue {
   position: absolute;
@@ -448,7 +444,7 @@ html {
 }
 .left__rect-orange {
   position: absolute;
-  top: 16rem;
+  top: 16.5rem;
   left: -3rem;
   transform: rotate(-50.81deg);
   background: #F28B64;
@@ -464,7 +460,7 @@ html {
   left: 1rem;
   transform: rotate(-36.15deg);
   background: #E2E2E2;
-  width: 60.897rem;
+  width: 60.8rem;
   height: 22rem;
   border-radius: 10rem;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -593,6 +589,7 @@ html {
 .second-section {
   min-height: 70rem;
   padding-top: 5.2rem;
+  overflow: hidden;
 }
 .second-section__container {
   position: relative;
@@ -600,6 +597,7 @@ html {
 .second-section__card-box {
   display: flex;
   gap: 3rem;
+  justify-content: center;
 }
 .second-section__card-box:not(:last-child) {
   margin-bottom: 2.5rem;
