--- a/sass/queries.sass
+++ b/sass/queries.sass
@@ -1,17 +1,50 @@
-//        1199px
-@media (max-width: 74.9375em)
-  .container
-    width: 9.6rem
+//        1111px
 
-.main-section__nav-container
-  position: absolute
-  top: 0
-  left: 0
-  padding: 4rem 0 0 4rem
-  min-height: 13rem;
- 
-.header__img
-  margin-right: 3rem
+@media (max-width: 69.4375em)
+  .left
+    img
+      width: 70rem
+    &__rect-blue
+      width: 51rem
+      height: 14rem
+      transform: rotate(-63deg)
+    &__rect-orange
+      width: 51rem
+      height: 14rem
+      transform: rotate(-55deg)
+    &__rect-grey
+      width: 51rem
+      height: 14rem
+      transform: rotate(-48deg)
+      
+  .main-section
+    min-height: 64rem
+    &__second-circle
+      top: 51rem   
+
+  .card-item
+    width: 23rem 
+    height: 23rem
+    &__img
+      height: 21.5rem
+    &__text
+      top: 13rem
+      right: -7rem
+
+.second-section
+  min-height: 52rem
+
+.icon-box
+  gap: 4rem
+  img
+    width: 5rem
+    
+html
+  font-size: 56.25%
+      
+//        1111px
+      
+
 
       
 
