--- a/sass/queries.sass
+++ b/sass/queries.sass
@@ -42,13 +42,56 @@
 html
   font-size: 56.25%
       
-//        1111px
+//        767px
       
+@media (max-width: 47.9375em)
+  .nav-menu
+    position: fixed
+    top: 0
+    right: -100%
+    height: 100vh
+    background: #5290EA
+    z-index: 11
+    width: 50%
+    transition: all 0.8s all ease
+    &__list
+      flex-direction: column
+      align-items: center
+      justify-content: space-evenly
+      height: 100%
+    &__item
+      margin: 0
+      font-size: 2.22rem
 
+  .hamburger
+    width: 3rem
+    cursor: pointer
+    position: absolute
+    top: 4rem
+    right: 3rem
+    min-height: 2rem
+    span
+      height: 0.4rem
+      background-color: #000
+      display: block
+      width: 100%
+      transition: 1s all ease
+      &:not(:last-child)
+        margin-bottom: 0.4rem     
 
-      
+  .hamburger_open
+    span
+      background: #F28B64
+      &:not(:last-child)
+        margin-bottom: -0.4rem
+      &:nth-child(1)
+        transform: translateY(0.3rem) rotate(-45deg)
+      &:nth-child(2)
+        display: none
+      &:nth-child(3)
+        transform: translateY(0.3rem) rotate(45deg)
 
- 
-
+  .nav-menu_open
+    right: 0
   
 
